fix #1126 [UI] fix submenu text overflow

--- a/src/client/components/sidebar/menu.styl
+++ b/src/client/components/sidebar/menu.styl
@@ -18,5 +18,8 @@
 .sub-context-menu-item
   cursor pointer
   padding 10px 16px
+  overflow hidden
+  white-space nowrap
+  text-overflow ellipsis
   &:hover, &.active
     background #000
